kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: web
      containers:
      - name: web
        image: eu.gcr.io/harmelodic-images/web:v0
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
        resources:
          requests:
            memory: 0.2Gi
            cpu: 500m
          limits:
            memory: 0.5Gi
            cpu: "1"
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 60
          httpGet:
            port: 80
            path: /
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
